--- a/multipage/product.html
+++ b/multipage/product.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>welcome page</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <p style="font-family: 'Courier New'; color: blue">Welcome yall!</p>
