--- a/multipage/news.html
+++ b/multipage/news.html
@@ -7,6 +7,7 @@
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p style="font-family: 'Courier New'; color: purple">some rumors?</p>
+    <h1>This is news page.</h1>
+    <p>Some rumors?</p>
   </body>
 </html>
