--- a/multipage/employees.html
+++ b/multipage/employees.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>product page</title>
+    <title>employees page</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p style="font-family: 'Courier New'; color: pink">
-      See our boss Xiaolin.
-    </p>
+    <h1>This is the employee page.</h1>
+    <p>See our boss Xiaolin.</p>
   </body>
 </html>
