--- a/multipage/product.html
+++ b/multipage/product.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>welcome page</title>
+    <title>product page</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p style="font-family: 'Courier New'; color: blue">Welcome yall!</p>
+    <h1>This is ths product page.</h1>
+    <p>what do we have here?</p>
   </body>
 </html>
