--- a/multipage/services.html
+++ b/multipage/services.html
@@ -7,8 +7,7 @@
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p style="font-family: 'Courier New'; color: yellow">
-      See the <strong>services</strong> below.
-    </p>
+    <h1>This is the services page.</h1>
+    <p >See the <strong>services</strong> below.</p>
   </body>
 </html>
